# gtest-cmake-prototype

./: .gitignore  CMakeLists.txt  README.txt  main.c  makefile  palindromenumber.c  palindromenumber.cc  palindromenumber.h  palindromenumbertest.cc
src/: CMakeLists.txt  palindromenumber.cc  palindromenumber.h
test/: CMakeLists.txt  palindromenumbertest.cc
